'Best practices' --> 'Best practice recommendations'.

--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -853,6 +853,6 @@ Testing then took place with members of the OVW research group (a video of which
 \section{Summary}
 This chapter has recounted the development of the Mirrorshades parallel reality platform, which combined the Oculus Rift DK1 VR HMD with the IndoorAtlas IPS. The greater positional accuracy of the IPS compared to the GPS solution used within the VTW project allowed investigation into the full freeform exploration scenario and into aspects of the detailed comparison scenario. The immersive nature of the DK1, completely filling the user's FOV with mediated stereoscopic visuals, allowed for investigation of the experiential aspect of switching wholly between complete and discrete real and virtual environments that was originally envisioned of the parallel reality concept but not realised by the VTW platform's modality of interaction. Four different styles of transition between real and virtual stimuli were implemented and their expected user experience, in terms of the extended vacancy problem, has been illustrated using the combined Milgram/Waterworth model.
 
-Latency measurements of the video see-through solution were performed and while higher than published best practices for VR experiences they were not expected to be as detrimental to user experience in the style of interaction envisioned of the platform as they would be in more traditional VR gaming scenarios. Initial testing of the platform was conducted, first within a department building and then within St Salvator's chapel, which was introduced as an ideal real world location at which to perform a user study of the Mirrorshades platform within the field of virtual heritage.
+Latency measurements of the video see-through solution were performed and while higher than published best practice recommendations for VR experiences they were not expected to be as detrimental to user experience in the style of interaction envisioned of the platform as they would be in more traditional VR gaming scenarios. Initial testing of the platform was conducted, first within a department building and then within St Salvator's chapel, which was introduced as an ideal real world location at which to perform a user study of the Mirrorshades platform within the field of virtual heritage.
 
 %=========================================================================================================
