--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -155,7 +155,7 @@ A total of 6 participants completed the stage 1 evaluation:
 	\item None had previously experienced the virtual chapel.
 \end{itemize}
 
-Due to the small sample size and its skewed age group the observations drawn from these results should be primarily considered in terms of initial evidence that justifies and informs more comprehensive future work. Combined with the fact that this stage of the evaluation was weighted more toward assessing the feasibility of the parallel reality concept and its worth compared to previous alternate reality applications within cultural heritage, than toward making detailed recommendations about specifics of implementations, these observations contribute to the set of abstract, high level best practices for future parallel reality endeavours enumerated in section \ref{best-practices-for-parallel-reality}, rather than leading to strict and infallible claims as to the nature of the parallel reality concept and its implementation. However in reference to the age group it is interesting to consider the observation, noted in section \ref{virtual-heritage}, that younger visitors to cultural heritage sites often experience less arousal at sites where the former splendour is no longer visible, which may mean that they have more to gain from an application of parallel reality to cultural heritage than other age groups.
+Due to the small sample size and its skewed age group the observations drawn from these results should be primarily considered in terms of initial evidence that justifies and informs more comprehensive future work. Combined with the fact that this stage of the evaluation was weighted more toward assessing the feasibility of the parallel reality concept and its worth compared to previous alternate reality applications within cultural heritage, than toward making detailed recommendations about specifics of implementations, these observations contribute to the set of abstract, high level best practice recommendations for future parallel reality endeavours enumerated in section \ref{best-practices-for-parallel-reality}, rather than leading to strict and infallible claims as to the nature of the parallel reality concept and its implementation. However in reference to the age group it is interesting to consider the observation, noted in section \ref{virtual-heritage}, that younger visitors to cultural heritage sites often experience less arousal at sites where the former splendour is no longer visible, which may mean that they have more to gain from an application of parallel reality to cultural heritage than other age groups.
 
 Original data are not reproduced within this thesis due to size constraints and the ethical agreement under which the evaluations were performed, however these data (including interview transcripts) can be made available by contacting the author\footnote{\texttt{cj@cjdavies.org}}.
 
@@ -543,7 +543,7 @@ Criticisms of the experience were primarily levelled at aspects of the system th
 
 \label{chapter-eval-2}
 
-This chapter recounts the second stage of evaluation conducted with the Mirrorshades platform, in which the focus was upon investigating how certain aspects of the platform's implementation affected the overall parallel reality experience. A first user study compared different manners of transitioning between RW and VR visual stimuli, while a second investigated changes to the balance between RW and VR visuals in the default view. The results of these studies furthered the establishment of a set of best practices to inform future parallel reality endeavours.
+This chapter recounts the second stage of evaluation conducted with the Mirrorshades platform, in which the focus was upon investigating how certain aspects of the platform's implementation affected the overall parallel reality experience. A first user study compared different manners of transitioning between RW and VR visual stimuli, while a second investigated changes to the balance between RW and VR visuals in the default view. The results of these studies furthered the establishment of a set of best practice recommendations to inform future parallel reality endeavours.
 
 %=========================================================================================================
 
@@ -667,7 +667,7 @@ A total of 7 participants completed the stage 2.1 evaluation:
 	\item None reported having previously experienced the virtual chapel.
 \end{itemize}
 
-As with the stage 1 evaluation, the small sample size and range of ages involved in the stage 2.1 evaluation means that the observations drawn from these results should be considered in the same manner: as initial evidence that informs the high level best practices discussed in section \ref{best-practices-for-parallel-reality} and which justifies and informs more comprehensive future work, rather than as detailed claims to specifics of implementations or concepts. Original data can again be obtained by contacting the author\footnote{\texttt{cj@cjdavies.org}}.
+As with the stage 1 evaluation, the small sample size and range of ages involved in the stage 2.1 evaluation means that the observations drawn from these results should be considered in the same manner: as initial evidence that informs the high level best practice recommendations discussed in section \ref{best-practices-for-parallel-reality} and which justifies and informs more comprehensive future work, rather than as detailed claims to specifics of implementations or concepts. Original data can again be obtained by contacting the author\footnote{\texttt{cj@cjdavies.org}}.
 
 %=========================================================================================================
 
@@ -1221,7 +1221,7 @@ Where inaccuracies such as these are unavoidable in a parallel reality system, t
 
 \subsection{Stage 2.1 Summary}
 
-This stage of the evaluation provided a first insight into best practices for implementing future parallel reality experiences, by evaluating preferences and reactions toward different implementations of the first of the two fundamental aspects of performing transitions between RW and VR visual stimuli discussed in section \ref{design-considerations-for-rw-vr-transitions}; the process by which the visual stimuli of one environment are replaced by those of the other environment. The ability to manually control the balance of RW/VR visuals emerged as preferable to more basic transitions that simply alternated between the default view and the VR view at set speeds, while adding uncontrolable moments of VR visuals to the default view led to a negative effect upon enjoyment and comfort but a positive effect upon observation and understanding of the relationship between the two constituent environments.
+This stage of the evaluation provided a first insight into best practice recommendations for implementing future parallel reality experiences, by evaluating preferences and reactions toward different implementations of the first of the two fundamental aspects of performing transitions between RW and VR visual stimuli discussed in section \ref{design-considerations-for-rw-vr-transitions}; the process by which the visual stimuli of one environment are replaced by those of the other environment. The ability to manually control the balance of RW/VR visuals emerged as preferable to more basic transitions that simply alternated between the default view and the VR view at set speeds, while adding uncontrolable moments of VR visuals to the default view led to a negative effect upon enjoyment and comfort but a positive effect upon observation and understanding of the relationship between the two constituent environments.
 
 Participants overwhelmingly preferred transition 3 compared to the others, which was somewhat surprising as initial experiments with the Mirrorshades platform with members of the OVW research group strongly indicated preference toward transition 2. With the larger number of participants in this stage of evaluation and the unscientific nature of the tests within the OVW group, this preference toward transition 3 should be considered legitimate even though unexpected.
 
@@ -1277,7 +1277,7 @@ As the controlled variable between the two parallel reality scenarios was based 
 	\item None reported having previously experienced the virtual chapel.
 \end{itemize}
 
-As with previous stages of the evaluation, the small sample size involved in the stage 2.2 evaluation means that the observations drawn from these results should be considered in the same manner: as initial evidence that informs the high level best practices discussed in section \ref{best-practices-for-parallel-reality} and which justifies and informs more comprehensive future work, rather than as detailed claims to specifics of implementations or concepts. Original data can again be obtained by contacting the author\footnote{\texttt{cj@cjdavies.org}}.
+As with previous stages of the evaluation, the small sample size involved in the stage 2.2 evaluation means that the observations drawn from these results should be considered in the same manner: as initial evidence that informs the high level best practice recommendations discussed in section \ref{best-practices-for-parallel-reality} and which justifies and informs more comprehensive future work, rather than as detailed claims to specifics of implementations or concepts. Original data can again be obtained by contacting the author\footnote{\texttt{cj@cjdavies.org}}.
 
 %=========================================================================================================
 
@@ -1631,15 +1631,15 @@ As will be discussed further in the following chapter, these observations indica
 
 %=========================================================================================================
 
-\section{Best Practices for Parallel Reality}
+\section{Best Practice Recommendations for Parallel Reality}
 \label{best-practices-for-parallel-reality}
-The evaluations described in this and the preceding chapter have experimentally proven the feasibility and shown the value of the Mirrorshades platform, and parallel reality in general, as a new modality for the tandem exploration of real and virtual environments using a cultural heritage site as a real world use case, as well as revealing a number of indicators toward best practices for future implementations of parallel reality. With the merit of the concept compared to a seated VR experience established by the stage 1 evaluation, the stage 2.1 and 2.2 evaluations explored different implementation details of the platform to more directly inform the future development of similar systems, to allow the benefits promised by the concept to be best achieved.
+The evaluations described in this and the preceding chapter have experimentally proven the feasibility and shown the value of the Mirrorshades platform, and parallel reality in general, as a new modality for the tandem exploration of real and virtual environments using a cultural heritage site as a real world use case, as well as revealing a number of indicators toward best practice recommendations for future implementations of parallel reality. With the merit of the concept compared to a seated VR experience established by the stage 1 evaluation, the stage 2.1 and 2.2 evaluations explored different implementation details of the platform to more directly inform the future development of similar systems, to allow the benefits promised by the concept to be best achieved.
 
 Stage 2.1 assessed participant responses to several different styles of performing transitions between the constituent RW and VR environments, with a transition which furnished participants with complete control over the percentage of the visual stimuli of each environment that were presented to them emerging the clear favourite. The ability to use this transition to occupy a position between the two extremes and perceive a mix of both environments emerged as a useful and enjoyable technique, even though it was not the envisaged experience of a parallel reality platform. The introduction of brief automatic transitions from RW to VR was met negatively when assessed in terms of enjoyment and preference, but positively when assessed in terms of awareness and understanding of the relationship between the two environments.
 
 Stage 2.2 further investigated the mix scenario, presenting VR visual stimuli to the user without their conscious invocation of a transition, with the intention of raising awareness and understanding between the environments and to cause the user to see aspects of the RW environment that they might otherwise have missed, but without introducing such the negative response as the automatic transition from stage 2.1 did. This was performed by replacing the 100\% RW default view with a view that instead presented a percentage of each environment at all times. The more extreme case of a 50\% VR/50\% RW split led to the greater increase in spatial presence within the VR environment and a barely perceptible decrease in experienced realism of the VR environment, however the 75\% RW/25\% VR split that led to less remarkable changes in IPQ results was preferred overall by the participants in interview responses.
 
-Together, these evaluations explored the two fundamental aspects of transitions between the constituent RW and VR environments of a parallel reality system that were identified in section \ref{design-considerations-for-rw-vr-transitions} as likely to have a direct bearing on the severity of the breaks in presence, explained by the extended vacancy problem, associated with these transitions. Considering the findings of these evaluations, and drawing from observations of other aspects of the system and its use, several best practices for future parallel reality implementations are proposed:
+Together, these evaluations explored the two fundamental aspects of transitions between the constituent RW and VR environments of a parallel reality system that were identified in section \ref{design-considerations-for-rw-vr-transitions} as likely to have a direct bearing on the severity of the breaks in presence, explained by the extended vacancy problem, associated with these transitions. Considering the findings of these evaluations, and drawing from observations of other aspects of the system and its use, several best practice recommendations for future parallel reality implementations are proposed:
 
 \begin{enumerate}
 	\item The combination of graphical hardware and software environment that produce the visuals displayed to the user during a parallel reality experience need to be carefully picked so as to provide sufficient quality of experience, but also need to be balanced against size, weight and heat.
