--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -11,7 +11,7 @@
 
 \label{chapter-conclusions}
 
-Alternate realities have fascinated mankind since early prehistory and with the advent of the computer and the smartphone we have seen the rise of many different categories of alternate reality that seek to replace, augment, diminish and mix with our familiar real world to expand our capabilities and our understanding. This thesis has introduced parallel reality as a new category of alternate reality comprising two environments that the user may freely switch between, one real and the other virtual, both complete unto themselves. The benefits that such a system impart upon the user by granting them the ability to mitigate the effects of an extended definition of the vacancy problem, first observed by Joshua Lifton during his investigation into the cross reality paradigm, and to explore parallel real and virtual environments in tandem have been shown through the development of the Mirrorshades parallel reality platform and its application to user studies within the realm of cultural heritage. Evaluation of these studies has lead to the establishment of a number of best practices to guide future parallel reality endeavours.
+Alternate realities have fascinated mankind since early prehistory and with the advent of the computer and the smartphone we have seen the rise of many different categories of alternate reality that seek to replace, augment, diminish and mix with our familiar real world to expand our capabilities and our understanding. This thesis has introduced parallel reality as a new category of alternate reality comprising two environments that the user may freely switch between, one real and the other virtual, both complete unto themselves. The benefits that such a system impart upon the user by granting them the ability to mitigate the effects of an extended definition of the vacancy problem, first observed by Joshua Lifton during his investigation into the cross reality paradigm, and to explore parallel real and virtual environments in tandem have been shown through the development of the Mirrorshades parallel reality platform and its application to user studies within the realm of cultural heritage. Evaluation of these studies has lead to the establishment of a number of best practice recommendations to guide future parallel reality endeavours.
 
 \begin{figure}[t]
 	\begin{center}
@@ -42,7 +42,7 @@ As listed in section \ref{intro-contributions} the contributions of this thesis 
 	\item Exploration into the suitability of an existing state of the art alternate reality modality of interaction (Situated Simulations) for investigation into parallel reality experience, producing the Virtual Time Window platform through extension of the Second Life client.
 	\item Development of a bespoke platform for parallel reality, dubbed Mirrorshades, that uses the Unity game engine to combine the modern virtual reality hardware of the Oculus Rift with the novel indoor positioning technology of IndoorAtlas.
 	\item Evaluation of the Mirrorshades platform through user studies of a real world use case studies within the realm of virtual heritage, including the discussion and application of an established presence questionnaire to a parallel reality experience, both to assess the worth of the concept and to inform future implementations.
-	\item Creation and discussion of a set of best practices to guide future parallel reality endeavours.
+	\item Creation and discussion of a set of best practice recommendations to guide future parallel reality endeavours.
 \end{itemize}
 
 %=========================================================================================================
@@ -102,9 +102,9 @@ The notion of presence in relation to parallel reality experiences presented an 
 	\item[6] Evaluate user studies to inform creation of best practise recommendations for future parallel reality endeavours.
 \end{enumerate}
 
-As listed in section \ref{best-practices-for-parallel-reality} a number of best practices to guide future parallel reality endeavours were created. These best practices are presented as observations from an initial investigation into a new category of alternate reality. The small number of participants, their limited age range and the use of a single case study within the context of cultural heritage prevents any detailed, low level claims being made into the best manners in which to implement particular features of a parallel reality system. But as initial evidence that justifies more detailed future work, they hope to help direct the design and implementation of future parallel reality endeavours without presumptuously attempting to prescribe specifics of individual features for which sufficient data and observations are not yet available.
+As listed in section \ref{best-practices-for-parallel-reality} a number of best practice recommendations to guide future parallel reality endeavours were created. These best practice recommendations are presented as observations from an initial investigation into a new category of alternate reality. The small number of participants, their limited age range and the use of a single case study within the context of cultural heritage prevents any detailed, low level claims being made into the best manners in which to implement particular features of a parallel reality system. But as initial evidence that justifies more detailed future work, they hope to help direct the design and implementation of future parallel reality endeavours without presumptuously attempting to prescribe specifics of individual features for which sufficient data and observations are not yet available.
 
-These best practices cover technology based aspects, such as the importance of choosing appropriate hardware and software environments to provide the best graphical quality as possible, aspects mitigating limitations of technology that are not as easily overcome, such as intelligently handling inaccuracies in position tracking, as well as more subjective/experiential aspects relating to how implementation of transitions between real and virtual environments affect user experience, utility of the system and overall enjoyment.
+These best practice recommendations cover technology based aspects, such as the importance of choosing appropriate hardware and software environments to provide the best graphical quality as possible, aspects mitigating limitations of technology that are not as easily overcome, such as intelligently handling inaccuracies in position tracking, as well as more subjective/experiential aspects relating to how implementation of transitions between real and virtual environments affect user experience, utility of the system and overall enjoyment.
 
 %=========================================================================================================
 
