--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -77,7 +77,7 @@ The design and development of a new alternate reality concept required thorough 
 
 %Parallel reality aims to further address the vacancy problem, originally coined by Joshua Lifton, by allowing users to switch freely between equivalent vantage points in two complete environments, one real and the other virtual. While the cross reality systems developed by Lifton succeeded in addressing the `absence' of a person from one environment while participating in the other by introducing changes into one environment based upon triggers in the other, the ability to visually engage with both environments in the true sense of being \textit{``in more than one place (reality) at a time''} was missing from these systems.
 
-The approach taken by this body of research was first to develop a well defined taxonomy of existing alternate reality definitions, in order to correctly situate the new category of parallel reality against them and to inform its design and implementation from the findings and adopted best practices produced by prior alternate reality investigation. This process, which is covered by chapter \ref{chapter-background}, created the combined Milgram/Waterworth model (section \ref{combined-milgram-waterworth-model}) and introduced an extended definition of the vacancy problem (section \ref{visualising-transitions-extended-vacancy}) in order to sufficiently illustrate and understand the experiential aspect of the proposed parallel reality concept.
+The approach taken by this body of research was first to develop a well defined taxonomy of existing alternate reality definitions, in order to correctly situate the new category of parallel reality against them and to inform its design and implementation from the findings and adopted best practice recommendations produced by prior alternate reality investigation. This process, which is covered by chapter \ref{chapter-background}, created the combined Milgram/Waterworth model (section \ref{combined-milgram-waterworth-model}) and introduced an extended definition of the vacancy problem (section \ref{visualising-transitions-extended-vacancy}) in order to sufficiently illustrate and understand the experiential aspect of the proposed parallel reality concept.
 
 The \textit{merit} of the parallel reality concept, however, could not be assessed through such purely theoretical means. While one could have postulated as to the experiential aspects of such a system and how they would manifest during particular tasks and scenarios, it was only through actual creation and application of a parallel reality platform that such postulations could be corroborated or refuted. Thus after the establishment of a strong theoretical foundation of alternate reality taxonomy and experience, an approach of practice-based research, specifically `research through practice'~\cite{Chynoweth2014}, was adopted in order to develop a parallel reality system which could be applied to real world user studies to allow collection and subsequent evaluation of empirical evidence.
 
@@ -199,7 +199,7 @@ The contributions of this thesis can be summarized as follows:
 	\item Exploration into the suitability of an existing state of the art alternate reality modality of interaction (Situated Simulations) for investigation into parallel reality experience, producing the Virtual Time Window platform through extension of the Second Life client.
 	\item Development of a bespoke platform for parallel reality, dubbed Mirrorshades, that uses the Unity game engine to combine the modern virtual reality hardware of the Oculus Rift with the novel indoor positioning technology of IndoorAtlas.
 	\item Evaluation of the Mirrorshades platform through user studies of a real world use case studies within the realm of virtual heritage, including the discussion and application of an established presence questionnaire to a parallel reality experience, both to assess the worth of the concept and to inform future implementations.
-	\item Creation and discussion of a set of best practices to guide future parallel reality endeavours.
+	\item Creation and discussion of a set of best practice recommendations to guide future parallel reality endeavours.
 \end{itemize}
 
 %=========================================================================================================
