Updating embargo in declaration. Ready for binding.

--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -166,9 +166,9 @@ Finally, the evaluation of parallel reality in this thesis has been based upon e
 
 In summary, future research into the parallel reality concept would do well to:
 \begin{itemize}
-	\item Investigate its application to other domains, in particular those in which previously established alternate reality techniques have demonstrated success or in which previously established alternate reality techniques were not able to fulfil the hopes and expectations.
+	\item Investigate its application to other domains, in particular those in which previously established alternate reality techniques have demonstrated success or in which previously established alternate reality techniques were not able to meet with hopes and expectations.
 
-	\item Investigate its application over substantially larger environments, requiring adoption of smaller, lighter hardware and position tracking accurate over wide areas.
+	\item Investigate its application over substantially larger environments, requiring adoption of smaller, lighter hardware and position tracking solutions accurate over wide areas.
 
 	\item Evaluate it from perspectives other than presence, perhaps focussing on utility when applied to particular tasks or challenges.
 
