Blank pages before & after (multiple of 4 for epubli).

--- a/thesis.tex
+++ b/thesis.tex
@@ -123,6 +123,10 @@
 
 % ======= ======= ======= ======= ======= ======= =======
 
+\blankpage
+
+\blankpage
+
 % cover page
 
 \thispagestyle{empty}
@@ -337,5 +341,17 @@
 \bibliography{bib}
 
 % ======= ======= ======= ======= ======= ======= =======
+
+\afterpage{\blankpage}
+
+\pagebreak
+
+\thispagestyle{empty}
+
+\blankpage
+
+\blankpage
+
+\blankpage
 
 \end{document}
